Updated CLI management

--- a/pytemplate/setup.cfg
+++ b/pytemplate/setup.cfg
@@ -17,9 +17,11 @@ classifiers =
 packages = find:
 
 # add all requirements here
+# remember to reinstall package after adding new dependencies
 python_requires = >=3.6
 install_requires =
     numpy
+    typer[all]
 
 [options.packages.find]
 # don't treat resources as a package
@@ -29,7 +31,7 @@ exclude = resources
 
 [options.entry_points]
 console_scripts =
-    pytemplate = pytemplate.__main__:main
+    pytemplate = pytemplate.__main__:cli
 
 [options.package_data]
 # instead treat resources as data
