Changed package structure

--- a/pytemplate/setup.cfg
+++ b/pytemplate/setup.cfg
@@ -12,6 +12,10 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
+# set package root as src
+package_dir =
+    =src
+
 # automatically find all packages
 # searching recursively starting from directory where this file is
 packages = find:
@@ -24,6 +28,9 @@ install_requires =
     typer[all]
 
 [options.packages.find]
+# search in src directory
+where = src
+
 # don't treat resources as a package
 # note that you still need to add __init__.py to every subdirectory in resources
 # importlib needs that to work
