Added different environment files

--- a/environments/test.yml
+++ b/environments/test.yml
@@ -1,20 +1,21 @@
 # provide default environment name
-name: pytemplate
+name: pytemplate-test
 
 # conda-forge used only if packages not found in defaults
 channels:
   - defaults
   - conda-forge
 
-# add all development time conda packages here
+# add all test time conda packages here
 # package dependencies should be in setup.cfg instead
-# package will be installed locally with pip -e and afterwards can be treated as any other package
-# if you change something in the package's code you don't have to install the package again
-# that's because locally the code is accessed directly from the source
+# package will be installed with pip and afterwards can be treated as any other package
+# if you change something in the package's code you have to install the package again
+# that's because you shouldn't modify anything at test time
 # put all pinned package dependencies (with exact versions) in requirements.txt for reproducible environments
 dependencies:
   - python==3.9.2
   - pip==21.0.1
+  - pytest==6.2.3
   - pip:
       - -r file:requirements.txt
-      - -e pytemplate
+      - ../pytemplate
