--- a/environments/deploy.yml
+++ b/environments/deploy.yml
@@ -1,19 +1,22 @@
-# provide default environment name
 name: pytemplate-deploy
-
-# conda-forge used only if packages not found in defaults
 channels:
   - defaults
   - conda-forge
-
-# package dependencies should be in setup.cfg instead
-# package will be installed with pip and afterwards can be treated as any other package
-# if you change something in the package's code you have to install the package again
-# that's because you shouldn't modify anything at deploy time
-# put all pinned package dependencies (with exact versions) in requirements.txt for reproducible environments
 dependencies:
-  - python==3.9.2
+  - _libgcc_mutex==0.1
+  - ca-certificates==2021.4.13
+  - certifi==2020.12.5
+  - openssl==1.1.1k
   - pip==21.0.1
+  - python==3.9.2
+  - setuptools==52.0.0
+  - sqlite==3.35.4
+  - tk==8.6.10
+  - tzdata==2020f
+  - wheel==0.36.2
+  - xz==5.2.5
+  - zlib==1.2.11
   - pip:
       - -r file:requirements.txt
       - ../pytemplate
+
