--- a/environments/docs.yml
+++ b/environments/docs.yml
@@ -1,13 +1,36 @@
-# provide default environment name
 name: pytemplate-docs
-
-# conda-forge used only if packages not found in defaults
 channels:
   - defaults
   - conda-forge
-
-# add all docs time conda packages here
-# as you can see we only need the mkdocs package
-# that's because no code needs to run, only the docs files are accessed
 dependencies:
+  - _libgcc_mutex==0.1
+  - ca-certificates==2021.4.13
+  - certifi==2020.12.5
+  - click==7.1.2
+  - future==0.18.2
+  - importlib-metadata==3.10.0
+  - jinja2==2.11.3
+  - joblib==1.0.1
+  - markdown==3.3.4
+  - markupsafe==1.1.1
+  - nltk==3.6.1
+  - openssl==1.1.1k
+  - pip==21.0.1
+  - pygments==2.8.1
+  - python==3.9.2
+  - pyyaml==5.4.1
+  - regex==2021.4.4
+  - setuptools==52.0.0
+  - six==1.15.0
+  - sqlite==3.35.4
+  - tk==8.6.10
+  - tornado==6.1
+  - tqdm==4.59.0
+  - tzdata==2020f
+  - wheel==0.36.2
+  - xz==5.2.5
+  - yaml==0.2.5
+  - zipp==3.4.1
+  - zlib==1.2.11
   - mkdocs-material==7.1.3
+
