--- a/environments/local.yml
+++ b/environments/local.yml
@@ -1,22 +1,48 @@
-# provide default environment name
 name: pytemplate-local
-
-# conda-forge used only if packages not found in defaults
 channels:
   - defaults
   - conda-forge
-
-# add all development time conda packages here
-# package dependencies should be in setup.cfg instead
-# package will be installed locally with pip -e and afterwards can be treated as any other package
-# if you change something in the package's code you don't have to install the package again
-# that's because locally the code is accessed directly from the source
-# put all pinned package dependencies (with exact versions) in requirements.txt for reproducible environments
 dependencies:
-  - python==3.9.2
+  - _libgcc_mutex==0.1
+  - attrs==20.3.0
+  - ca-certificates==2021.4.13
+  - certifi==2020.12.5
+  - click==7.1.2
+  - future==0.18.2
+  - importlib-metadata==3.10.0
+  - iniconfig==1.1.1
+  - jinja2==2.11.3
+  - joblib==1.0.1
+  - markdown==3.3.4
+  - markupsafe==1.1.1
+  - more-itertools==8.7.0
+  - nltk==3.6.1
+  - openssl==1.1.1k
+  - packaging==20.9
   - pip==21.0.1
+  - pluggy==0.13.1
+  - py==1.10.0
+  - pygments==2.8.1
+  - pyparsing==2.4.7
   - pytest==6.2.3
+  - python==3.9.2
+  - pyyaml==5.4.1
+  - regex==2021.4.4
+  - setuptools==52.0.0
+  - six==1.15.0
+  - sqlite==3.35.4
+  - tk==8.6.10
+  - toml==0.10.2
+  - tornado==6.1
+  - tqdm==4.59.0
+  - tzdata==2020f
+  - wheel==0.36.2
+  - xz==5.2.5
+  - yaml==0.2.5
+  - zipp==3.4.1
+  - zlib==1.2.11
   - mkdocs-material==7.1.3
   - pip:
       - -r file:requirements.txt
       - -e ../pytemplate
+
