--- a/environments/deploy-base.yml
+++ b/environments/deploy-base.yml
@@ -11,10 +11,11 @@ channels:
 # if you change something in the package's code you have to install the package again
 # that's because you shouldn't modify anything at deploy time
 # you can use utils/conda-lock.py to create deploy.yml with all (even indirect) dependencies pinned
+# also if you put dependencies without version here utils/conda-lock.py will act as env updater
 # package dependencies should be in requirements.txt instead
 dependencies:
-  - python==3.9.2
-  - pip==21.0.1
+  - python
+  - pip
   - pip:
       - -r file:requirements.txt
       - ../pytemplate
