--- a/environments/docs.yml
+++ b/environments/docs.yml
@@ -3,6 +3,8 @@ channels:
   - defaults
   - conda-forge
 dependencies:
+  - python==3.9.4
+  - mkdocs-material==7.1.3
   - _libgcc_mutex==0.1
   - ca-certificates==2021.4.13
   - certifi==2020.12.5
@@ -11,13 +13,18 @@ dependencies:
   - importlib-metadata==3.10.0
   - jinja2==2.11.3
   - joblib==1.0.1
+  - libffi==3.3
+  - livereload==2.6.3
+  - lunr==0.5.8
   - markdown==3.3.4
   - markupsafe==1.1.1
+  - mkdocs==1.1.2
+  - mkdocs-material-extensions==1.0.1
   - nltk==3.6.1
   - openssl==1.1.1k
   - pip==21.0.1
   - pygments==2.8.1
-  - python==3.9.2
+  - pymdown-extensions==8.1.1
   - pyyaml==5.4.1
   - regex==2021.4.4
   - setuptools==52.0.0
@@ -32,5 +39,4 @@ dependencies:
   - yaml==0.2.5
   - zipp==3.4.1
   - zlib==1.2.11
-  - mkdocs-material==7.1.3
 
