--- a/environments/local.yml
+++ b/environments/local.yml
@@ -3,29 +3,42 @@ channels:
   - defaults
   - conda-forge
 dependencies:
+  - python==3.9.4
+  - pip==21.0.1
+  - pytest==6.2.3
+  - tox==3.23.0
+  - mkdocs-material==7.1.3
+  - yaml==0.2.5
   - _libgcc_mutex==0.1
+  - appdirs==1.4.4
   - attrs==20.3.0
   - ca-certificates==2021.4.13
   - certifi==2020.12.5
   - click==7.1.2
+  - distlib==0.3.1
+  - filelock==3.0.12
   - future==0.18.2
   - importlib-metadata==3.10.0
   - iniconfig==1.1.1
   - jinja2==2.11.3
   - joblib==1.0.1
+  - libffi==3.3
+  - livereload==2.6.3
+  - lunr==0.5.8
   - markdown==3.3.4
   - markupsafe==1.1.1
+  - mkdocs==1.1.2
+  - mkdocs-material-extensions==1.0.1
   - more-itertools==8.7.0
   - nltk==3.6.1
   - openssl==1.1.1k
   - packaging==20.9
-  - pip==21.0.1
   - pluggy==0.13.1
   - py==1.10.0
   - pygments==2.8.1
+  - pymdown-extensions==8.1.1
   - pyparsing==2.4.7
-  - pytest==6.2.3
-  - python==3.9.2
+  - python_abi==3.9
   - pyyaml==5.4.1
   - regex==2021.4.4
   - setuptools==52.0.0
@@ -36,12 +49,11 @@ dependencies:
   - tornado==6.1
   - tqdm==4.59.0
   - tzdata==2020f
+  - virtualenv==20.4.4
   - wheel==0.36.2
   - xz==5.2.5
-  - yaml==0.2.5
   - zipp==3.4.1
   - zlib==1.2.11
-  - mkdocs-material==7.1.3
   - pip:
       - -r file:requirements.txt
       - -e ../pytemplate
