--- a/environments/test-base.yml
+++ b/environments/test-base.yml
@@ -12,11 +12,13 @@ channels:
 # if you change something in the package's code you have to install the package again
 # that's because you shouldn't modify anything at test time
 # you can use utils/conda-lock.py to create test.yml with all (even indirect) dependencies pinned
+# also if you put dependencies without version here utils/conda-lock.py will act as env updater
 # package dependencies should be in requirements.txt instead
 dependencies:
-  - python==3.9.2
-  - pip==21.0.1
-  - pytest==6.2.3
+  - python
+  - pip
+  - pytest
+  - tox
   - pip:
       - -r file:requirements.txt
       - ../pytemplate
