--- a/environments/deploy-base.yml
+++ b/environments/deploy-base.yml
@@ -6,16 +6,20 @@ channels:
   - defaults
   - conda-forge
 
-# package dependencies should be in setup.cfg instead
 # package will be installed with pip and afterwards can be treated as any other package
 # if you change something in the package's code you have to install the package again
 # that's because you shouldn't modify anything at deploy time
 # you can use utils/conda-lock.py to create deploy.yml with all (even indirect) dependencies pinned
 # also if you put dependencies without version here utils/conda-lock.py will act as env updater
-# package dependencies should be in requirements.txt instead
 dependencies:
+  # env dependencies
   - python
   - pip
+  # package dependencies
+  - numpy
+  - typer
+  - colorama
+  - shellingham
   - pip:
-      - -r file:requirements.txt
+      # local package
       - ../pytemplate
