--- a/environments/local.yml
+++ b/environments/local.yml
@@ -9,9 +9,14 @@ dependencies:
   - tox==3.23.0
   - mkdocs-material==7.1.3
   - yaml==0.2.5
+  - numpy==1.20.1
+  - typer==0.3.2
+  - colorama==0.4.4
+  - shellingham==1.3.1
   - _libgcc_mutex==0.1
   - appdirs==1.4.4
   - attrs==20.3.0
+  - blas==1.0
   - ca-certificates==2021.4.13
   - certifi==2020.12.5
   - click==7.1.2
@@ -20,6 +25,7 @@ dependencies:
   - future==0.18.2
   - importlib-metadata==3.10.0
   - iniconfig==1.1.1
+  - intel-openmp==2021.2.0
   - jinja2==2.11.3
   - joblib==1.0.1
   - libffi==3.3
@@ -29,8 +35,13 @@ dependencies:
   - markupsafe==1.1.1
   - mkdocs==1.1.2
   - mkdocs-material-extensions==1.0.1
+  - mkl==2021.2.0
+  - mkl-service==2.3.0
+  - mkl_fft==1.3.0
+  - mkl_random==1.2.1
   - more-itertools==8.7.0
   - nltk==3.6.1
+  - numpy-base==1.20.1
   - openssl==1.1.1k
   - packaging==20.9
   - pluggy==0.13.1
@@ -55,6 +66,5 @@ dependencies:
   - zipp==3.4.1
   - zlib==1.2.11
   - pip:
-      - -r file:requirements.txt
       - -e ../pytemplate
 
