--- a/environments/test-base.yml
+++ b/environments/test-base.yml
@@ -7,18 +7,22 @@ channels:
   - conda-forge
 
 # add all direct test time conda packages here
-# package dependencies should be in setup.cfg instead
 # package will be installed with pip and afterwards can be treated as any other package
 # if you change something in the package's code you have to install the package again
 # that's because you shouldn't modify anything at test time
 # you can use utils/conda-lock.py to create test.yml with all (even indirect) dependencies pinned
 # also if you put dependencies without version here utils/conda-lock.py will act as env updater
-# package dependencies should be in requirements.txt instead
 dependencies:
+  # env dependencies
   - python
   - pip
   - pytest
   - tox
+  # package dependencies
+  - numpy
+  - typer
+  - colorama
+  - shellingham
   - pip:
-      - -r file:requirements.txt
+      # local package
       - ../pytemplate
