--- a/environments/test.yml
+++ b/environments/test.yml
@@ -7,16 +7,28 @@ dependencies:
   - pip==21.0.1
   - pytest==6.2.3
   - tox==3.23.0
+  - numpy==1.20.1
+  - typer==0.3.2
+  - colorama==0.4.4
+  - shellingham==1.3.1
   - _libgcc_mutex==0.1
   - appdirs==1.4.4
   - attrs==20.3.0
+  - blas==1.0
   - ca-certificates==2021.4.13
   - certifi==2020.12.5
+  - click==7.1.2
   - distlib==0.3.1
   - filelock==3.0.12
   - iniconfig==1.1.1
+  - intel-openmp==2021.2.0
   - libffi==3.3
+  - mkl==2021.2.0
+  - mkl-service==2.3.0
+  - mkl_fft==1.3.0
+  - mkl_random==1.2.1
   - more-itertools==8.7.0
+  - numpy-base==1.20.1
   - openssl==1.1.1k
   - packaging==20.9
   - pluggy==0.13.1
@@ -34,6 +46,5 @@ dependencies:
   - xz==5.2.5
   - zlib==1.2.11
   - pip:
-      - -r file:requirements.txt
       - ../pytemplate
 
