--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: update
+name: Workflow on push
 
 on:
   push:
@@ -7,12 +7,18 @@ on:
 
 jobs:
   deploy-docs:
+    name: Deploy docs
     runs-on: ubuntu-20.04
+    defaults:
+      run:
+        shell: bash -l {0}
     steps:
-      - uses: actions/checkout@v2
-      - name: Install dependencies
-        run: conda env update -f environments/docs.yml
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up environment
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: pytemplate-docs
+          environment-file: environments/docs.yml
       - name: Deploy docs
-        run: |
-          conda activate
-          mkdocs gh-deploy --force
+        run: mkdocs gh-deploy --force
