--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,31 +1,22 @@
-name: Workflow on push
+name: Workflow for running tests
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'pytemplate/**'
+      - 'environment.yml'
+      - '.github/workflows/test.yml'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'pytemplate/**'
+      - 'environment.yml'
+      - '.github/workflows/test.yml'
 
 jobs:
-  deploy-docs:
-    name: Deploy docs
-    runs-on: ubuntu-20.04
-    defaults:
-      run:
-        shell: bash -l {0}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up environment
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          activate-environment: pytemplate
-          environment-file: environment.yml
-      - name: Install package
-        working-directory: pytemplate
-        # Sadly we need to install the package, waiting for https://github.com/python-poetry/poetry/issues/1644
-        run: poetry install --no-root --extras docs
-      - name: Deploy docs
-        run: mkdocs gh-deploy --force
   test:
     name: Run tests
     strategy:
