--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,29 +2,65 @@ name: Workflow for deploying docs
 
 on:
   push:
+    # trigger only on main branch
     branches:
       - main
+    # trigger only on changes to the following files
     paths:
       - 'docs/**'
       - 'mkdocs.yml'
       - '.github/workflows/docs.yml'
 
+# env for all jobs
+env:
+  CONDA_CACHE_DIR: ~/conda_pkgs_dir
+  POETRY_CACHE_DIR: ~/.cache/pypoetry
+  PIP_CACHE_DIR: ~/.cache/pip
+  # increase this value to manually reset cache
+  CACHE_NUMBER: 0
+
 jobs:
   deploy-docs:
     name: Deploy docs
+    # better to use pinned version here
     runs-on: ubuntu-20.04
     defaults:
       run:
+        # necessary for conda to work
         shell: bash -l {0}
     steps:
       - name: Checkout code
+        # Get repository code
         uses: actions/checkout@v2
+      - name: Cache conda
+        # Get conda cache (persistent between runs)
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.CONDA_CACHE_DIR }}
+          key: ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles('environment.yml') }}
+      - name: Cache poetry
+        # Get poetry and pip cache (persistent between runs)
+        uses: actions/cache@v2
+        with:
+          # cache poetry and pip at the same time
+          path: |
+            ${{ env.POETRY_CACHE_DIR }}
+            ${{ env.PIP_CACHE_DIR }}
+          key: ${{ runner.os }}-poetry-${{ env.CACHE_NUMBER }}-${{ hashFiles('pytemplate/pyproject.toml', 'pytemplate/poetry.lock') }}
       - name: Set up environment
+        # create and activate conda environment
         uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: pytemplate
           environment-file: environment.yml
-      - name: Install package
+          # necessary for caching to work
+          use-only-tar-bz2: true
+      - name: Set up poetry cache
+        # set up directories for poetry and pip cache (by default they are different on linux and windows)
+        run: |
+          poetry config cache-dir ${{ env.POETRY_CACHE_DIR }}
+          pip config set global.cache-dir ${{ env.PIP_CACHE_DIR }}
+      - name: Install docs tools
         working-directory: pytemplate
         # Sadly we need to install the package, waiting for https://github.com/python-poetry/poetry/issues/1644
         run: poetry install --no-root --extras docs
