--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,25 +2,38 @@ name: Workflow for running tests
 
 on:
   push:
+    # trigger only on main branch
     branches:
       - main
+    # trigger only on changes to the following files
     paths:
       - 'pytemplate/**'
       - 'environment.yml'
       - '.github/workflows/test.yml'
   pull_request:
+    # trigger only on main branch
     branches:
       - main
+    # trigger only on changes to the following files
     paths:
       - 'pytemplate/**'
       - 'environment.yml'
       - '.github/workflows/test.yml'
+
+# env for all jobs
+env:
+  CONDA_CACHE_DIR: ~/conda_pkgs_dir
+  POETRY_CACHE_DIR: ~/.cache/pypoetry
+  PIP_CACHE_DIR: ~/.cache/pip
+  # increase this value to manually reset cache
+  CACHE_NUMBER: 0
 
 jobs:
   test:
     name: Run tests
     strategy:
       matrix:
+        # better to use pinned versions here
         config:
           - { os: ubuntu-20.04, shell: bash -l }
           - { os: macos-10.15, shell: bash -l }
@@ -28,20 +41,47 @@ jobs:
     runs-on: ${{ matrix.config.os }}
     defaults:
       run:
+        # necessary for conda to work
         shell: ${{ matrix.config.shell }} {0}
     steps:
       - name: Checkout code
+        # Get repository code
         uses: actions/checkout@v2
+      - name: Cache conda
+        # Get conda cache (persistent between runs)
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.CONDA_CACHE_DIR }}
+          key: ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles('environment.yml') }}
+      - name: Cache poetry
+        # Get poetry and pip cache (persistent between runs)
+        uses: actions/cache@v2
+        with:
+          # cache poetry and pip at the same time
+          path: |
+            ${{ env.POETRY_CACHE_DIR }}
+            ${{ env.PIP_CACHE_DIR }}
+          key: ${{ runner.os }}-poetry-${{ env.CACHE_NUMBER }}-${{ hashFiles('pytemplate/pyproject.toml', 'pytemplate/poetry.lock') }}
       - name: Set up environment
+        # create and activate conda environment
         uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: pytemplate
           environment-file: environment.yml
-      - name: Install package
+          # necessary for caching to work
+          use-only-tar-bz2: true
+      - name: Set up poetry cache
+        # set up directories for poetry and pip cache (by default they are different on linux and windows)
+        run: |
+          poetry config cache-dir ${{ env.POETRY_CACHE_DIR }}
+          pip config set global.cache-dir ${{ env.PIP_CACHE_DIR }}
+      - name: Build package
         working-directory: pytemplate
         # workaround for non-editable install, waiting for https://github.com/python-poetry/poetry/issues/1382
-        run: |
-          poetry build -f wheel
-          pip install --find-links=dist pytemplate[test]
+        run: poetry build -f wheel
+      - name: Install package with test tools
+        working-directory: pytemplate
+        # use pip to install wheel produced in previous step
+        run: pip install --find-links=dist pytemplate[test]
       - name: Run tests
         run: pytest pytemplate
