--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,11 @@ on:
       - main
     # trigger only on changes to the following files
     paths:
-      - 'pytemplate/**'
+      - 'pytemplate/src/**'
+      - 'pytemplate/tests/**'
       - 'environment.yml'
+      - 'pytemplate/poetry.lock'
+      - 'pytemplate/pyproject.toml'
       - '.github/workflows/test.yml'
   pull_request:
     # trigger only on main branch
@@ -16,8 +19,11 @@ on:
       - main
     # trigger only on changes to the following files
     paths:
-      - 'pytemplate/**'
+      - 'pytemplate/src/**'
+      - 'pytemplate/tests/**'
       - 'environment.yml'
+      - 'pytemplate/poetry.lock'
+      - 'pytemplate/pyproject.toml'
       - '.github/workflows/test.yml'
 
 # env for all jobs
