--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,11 +31,11 @@ jobs:
         # necessary for conda to work
         shell: bash -l {0}
     steps:
-      - name: Checkout code
-        # get repository code
+      - # get repository code
+        name: Checkout code
         uses: actions/checkout@v2
-      - name: Cache packages
-        # get conda, poetry and pip cache (persistent between runs)
+      - # get conda, poetry and pip cache (persistent between runs)
+        name: Cache packages
         uses: actions/cache@v2
         with:
           path: |
@@ -43,22 +43,22 @@ jobs:
             ${{ env.POETRY_CACHE_DIR }}
             ${{ env.PIP_CACHE_DIR }}
           key: ${{ runner.os }}-pkgs-${{ env.CACHE_NUMBER }} }}
-      - name: Set up environment
-        # create and activate conda environment
+      - # create and activate conda environment
+        name: Set up environment
         uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: pytemplate
           environment-file: environment.yml
           # necessary for caching to work
           use-only-tar-bz2: true
-      - name: Set up poetry cache
-        # set up directories for poetry and pip cache (by default they are different on linux and windows)
+      - # set up directories for poetry and pip cache (by default they are different on linux and windows)
+        name: Set up poetry cache
         run: |
           poetry config cache-dir ${{ env.POETRY_CACHE_DIR }}
           pip config set global.cache-dir ${{ env.PIP_CACHE_DIR }}
       - name: Install docs tools
         working-directory: pytemplate
-        # sadly we need to install the package, waiting for https://github.com/python-poetry/poetry/issues/1644
+        # we need to install all base dependencies, waiting for https://github.com/python-poetry/poetry/issues/1644
         run: poetry install --no-root --extras docs
       - name: Deploy docs
         working-directory: pytemplate/docs
