Updated version to match cookiecutter

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,18 +42,16 @@ jobs:
             ${{ env.CONDA_CACHE_DIR }}
             ${{ env.POETRY_CACHE_DIR }}
             ${{ env.PIP_CACHE_DIR }}
-          key: ${{ runner.os }}-pkgs-${{ env.CACHE_NUMBER }} }}
+          key: ${{ runner.os }}-pkgs-${{ env.CACHE_NUMBER }}
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
-      - # set up pip cache
-        name: Set up pip cache
+      - name: Set up pip cache
         run: python3 -m pip config set global.cache-dir ${{ env.PIP_CACHE_DIR }}
       - name: Install poetry
         run: python3 -m pip install poetry
-      - # set up poetry cache
-        name: Set up poetry cache
+      - name: Set up poetry cache
         run: poetry config cache-dir ${{ env.POETRY_CACHE_DIR }}
       - # create and activate conda environment
         name: Set up environment
