Changed docs workflow

--- a/pytemplate/pyproject.toml
+++ b/pytemplate/pyproject.toml
@@ -21,14 +21,10 @@ jupyterlab = { version = "^3", optional = true }
 # test
 pytest = { version = "^6", optional = true }
 
-# docs
-mkdocs-material = { version = "^7", optional = true }
-
 [tool.poetry.extras]
 # need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
-dev = ["jupyterlab", "pytest", "mkdocs-material"]
+dev = ["jupyterlab", "pytest"]
 test = ["pytest"]
-docs = ["mkdocs-material"]
 [tool.poetry.scripts]
 # cli entry point
 pytemplate = "pytemplate.__main__:cli"
