--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,9 +8,10 @@ on:
     # trigger only on changes to the following files
     paths:
       - "pytemplate/src/**"
-      - "environment.yml"
       - "pytemplate/poetry.lock"
       - "pytemplate/pyproject.toml"
+      - "environment.yml"
+      - "requirements.txt"
       - "Dockerfile"
       - ".github/workflows/docker.yml"
   pull_request:
@@ -20,9 +21,10 @@ on:
     # trigger only on changes to the following files
     paths:
       - "pytemplate/src/**"
-      - "environment.yml"
       - "pytemplate/poetry.lock"
       - "pytemplate/pyproject.toml"
+      - "environment.yml"
+      - "requirements.txt"
       - "Dockerfile"
       - ".github/workflows/docker.yml"
 
@@ -35,23 +37,11 @@ jobs:
         uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx
       - name: Build the image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: false
           tags: pytemplate:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new
-      - # Temp fix
-        # https://github.com/docker/build-push-action/issues/252
-        # https://github.com/moby/buildkit/issues/1896
-        name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          cache-from: type=gha, scope=${{ github.workflow }}
+          cache-to: type=gha, mode=max, scope=${{ github.workflow }}
