--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,10 @@ on:
     paths:
       - "pytemplate/src/**"
       - "pytemplate/tests/**"
-      - "environment.yml"
       - "pytemplate/poetry.lock"
       - "pytemplate/pyproject.toml"
+      - "environment.yml"
+      - "requirements.txt"
       - ".github/workflows/test.yml"
   pull_request:
     # trigger only on main branch
@@ -21,9 +22,10 @@ on:
     paths:
       - "pytemplate/src/**"
       - "pytemplate/tests/**"
-      - "environment.yml"
       - "pytemplate/poetry.lock"
       - "pytemplate/pyproject.toml"
+      - "environment.yml"
+      - "requirements.txt"
       - ".github/workflows/test.yml"
 
 # env for all jobs
@@ -67,11 +69,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: "3.9.7"
       - name: Set up pip cache
         run: python3 -m pip config set global.cache-dir ${{ env.PIP_CACHE_DIR }}
       - name: Install poetry
-        run: python3 -m pip install poetry
+        run: python3 -m pip install -r requirements.txt
       - name: Set up poetry cache
         run: poetry config cache-dir ${{ env.POETRY_CACHE_DIR }}
       - # create and activate conda environment
