--- a/pytemplate/pyproject.toml
+++ b/pytemplate/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pytemplate"
 version = "0.1.0"
-description = "A small example package"
+description = "This is a simple example package."
 readme = "README.md"
 authors = ["Example Author <author@example.com>"]
 classifiers = [
@@ -13,13 +13,13 @@ documentation = "https://spietras.github.io/pytemplate"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-typer = { version = "^0.3", extras = ["all"] }
+typer = { version = "^0.4", extras = ["all"] }
 
 # dev
-jupyterlab = { version = "^3", optional = true }
+jupyterlab = { version = "^3.2", optional = true }
 
 # test
-pytest = { version = "^6", optional = true }
+pytest = { version = "^7.0", optional = true }
 
 [tool.poetry.extras]
 # need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
